test-cases/final-dump/purity_error.exp
Error detected during type checking of module(s) purity_error
[91mfinal-dump/purity_error.wybe:3:31: Calling impure proc purity_error.something_impure<0>, expecting at least semipure
[0m[91mfinal-dump/purity_error.wybe:7:29: Calling impure foreign mul, expecting at least semipure
[0m
